[tool.poetry]
name = "cloud-db"
version = "0.1.0"
description = ""
authors = ["mathbrahian <mathbrahian@gmail.com>"]
readme = "README.md"
packages = [{include = "cloud_db"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.9"
psycopg2 = "^2.9.6"
bcrypt = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
