[tool.poetry]
name = "cloud-db"
version = "0.1.0"
description = ""
authors = ["mathbrahian <mathbrahian@gmail.com>"]
readme = "README.md"
packages = [{include = "cloud_db"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.9"
psycopg2 = "^2.9.6"
bcrypt = "^4.0.1"
python-dotenv = "^1.0.0"
marshmallow = "3.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
